--- a/style.css
+++ b/style.css
@@ -1,3 +1,53 @@
-h1 {
-	color: red;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+nav {
+    overflow: hidden;
+    margin: 22px 11px;
+    padding: 13px 15px;
+    background-color: grey;
+}
+
+nav ul {
+    float: right;
+    margin-top: 58px;
+}
+nav ul li {
+    list-style: none;
+    float: left;
+    padding: 3px 4px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    font-size: 21px;
+    font-family: sans-serif;
+    color: #fff;
+}
+
+.section {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.section h1 {
+    margin: 20px;
+    padding: 15px;
+    font-size: 6rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: aqua;
+    z-index: 1;
+}
+
+.image-container {
+	height: 21px;
+}
+
